--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -21,11 +22,13 @@ android {
     buildTypes {
         debug{
             buildConfigField("String", "API_URL", "\"https://api.covid19api.com/\"")
+            buildConfigField("String", "FIREBASE_WEB_CLIENT", "\"497510631237-d8uni8gpt0cf2q2jfou4kt22hltmvfs6.apps.googleusercontent.com\"")
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("String", "API_URL", "\"https://api.covid19api.com/\"")
+            buildConfigField("String", "FIREBASE_WEB_CLIENT", "\"497510631237-d8uni8gpt0cf2q2jfou4kt22hltmvfs6.apps.googleusercontent.com\"")
         }
     }
     compileOptions {
@@ -61,6 +64,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.tbuonomo:dotsindicator:4.2'
 
+    //Firebase
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
     //Support multidex
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -72,6 +79,7 @@ dependencies {
     implementation "org.koin:koin-android:2.2.1"
     implementation "org.koin:koin-androidx-scope:2.2.1"
     implementation "org.koin:koin-androidx-viewmodel:2.2.1"
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     testImplementation "org.koin:koin-test:2.2.1"
 
     //Networking
