--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 
     //Firebase
     implementation 'com.google.firebase:firebase-auth:21.0.1'
